--- a/docs/package.json
+++ b/docs/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "sfeirschoolxxx",
+  "name": "sfeirschoolazuredevopsdevs",
   "version": "1.0.0",
   "description": "Sfeir School Azure DevOps for DEVs",
   "scripts": {
-    "sass": "node-sass ./scss/slides.scss -o ./css/ --source-map=true --watch=\"scss\" --recursive=\"scss\"",
-    "sass-once": "node-sass ./scss/slides.scss -o ./css/ --source-map=true ",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "live-server --port=4242 --open=\"./index.html\" --watch=\"markdown,scripts/\"",
     "start": "parallelshell \"npm run serve\" \"npm run sass\"",
